# docs/swagger.json
@@ -142,6 +142,12 @@
                             "$ref": "#/definitions/promos.PromoPrice"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/promos.PromoError"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -182,6 +188,12 @@
                             "$ref": "#/definitions/promos.PromoDeleted"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/promos.PromoError"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -197,7 +209,7 @@
                 }
             }
         },
-        "/promos/:uuid/:price": {
+        "/promos/:uuid/": {
             "put": {
                 "description": "Change the promo price using its uuid",
                 "produces": [
@@ -367,7 +379,7 @@
             "type": "object",
             "properties": {
                 "price": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         }
